--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -206,7 +206,7 @@
   </colourful-hover>
 </section>
 
-<style>
+{%- style -%}
 
   .product-image-info{
     display: none;
@@ -356,4 +356,4 @@
       font-size: calc(45px + (120 - 45) * ((100vw - 992px) / (1920 - 992)));
     }
   }
-</style>
+{%- endstyle -%}
