--- a/sections/product-tab.liquid
+++ b/sections/product-tab.liquid
@@ -33,27 +33,7 @@
   "max_blocks": 4,
   "presets": [
     {
-      "name": "Product Tabs",
-      "blocks": [
-        {
-          "type": "tab",
-          "settings": {
-            "tab_title": "MENS"
-          }
-        },
-        {
-          "type": "tab",
-          "settings": {
-            "tab_title": "WOMENS"
-          }
-        },
-        {
-          "type": "tab",
-          "settings": {
-            "tab_title": "KIDS"
-          }
-        }
-      ]
+      "name": "Product Tabs"
     }
   ]
 }
