--- a/assets/home-page-product.css
+++ b/assets/home-page-product.css
@@ -155,8 +155,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-width: 50px;
-    height: 50px;
+    width: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
+    height: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
+    min-width: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
+    min-height: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
     border: 1px solid #eee;
     border-radius: 4px;
     background-color: #f9f9f9;
