home page issue fixed

--- a/assets/base.css
+++ b/assets/base.css
@@ -99,11 +99,11 @@ h2.facet-filters__label,
 .sp-card-wrapper .full-unstyled-link {
   font-family: 'Knockout-31';
 }
-body {
-  font-family: "Roboto-Regular", sans-serif;
-}
+/*body {*/
+  /*font-family: "Roboto-Regular", sans-serif;*/
+/*}*/
 .full-unstyled-link {
-  font-family: "Roboto-Regular", sans-serif;
+  /*font-family: "Roboto-Regular", sans-serif;*/
   font-weight: bold;
 }
 /* Define the custom property (CSS variable) */
