--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -23,7 +23,8 @@
   .homepage-banner {
     color: #fff;
     position: relative;
-    padding: 5rem 0 8rem;
+    padding-top: calc(50px + (109 - 50) * ((100vw - 360px) / (1920 - 360)));
+    padding-bottom: 8rem;
   }
   .homepage-banner .homepage-banner-wrapper {
       position: relative;
@@ -34,7 +35,6 @@
   }
 
   .banner-heading {
-    font-size: calc(25px + (75 - 25) * ((100vw - 360px) / (1920 - 360)));
     font-weight: bold;
     line-height: 1.2;
     margin-block: 0;
@@ -43,7 +43,7 @@
   .banner-subheading {
     font-size: calc(18px + (22 - 18) * ((100vw - 360px) / (1920 - 360)));
     margin-block: 0;
-    line-height: 1.3;
+    line-height: 1.1;
   }
   .banner-content .banner-buttons {
     margin-top: 20px;
@@ -140,6 +140,9 @@
      .homepage-banner-wrapper .banner-buttons.hide-mobile {
       display: none;
     }
+     .banner-heading {
+        font-size: calc(25px + (45 - 25) * ((100vw - 360px) / (992 - 360)));
+        }
     .homepage-banner-wrapper .banner-buttons {
         display: flex;
         justify-content: center;
@@ -159,6 +162,9 @@
     .hide-desktop {
           display: none;
         }
+         .banner-heading {
+            font-size: calc(35px + (75 - 35) * ((100vw - 992px) / (1920 - 992)));
+            }
     .homepage-banner .homepage-banner-wrapper .banner-center-image {
         width: 70%;
         {% case section.settings.content_alignment %}
@@ -198,7 +204,7 @@
     }
 
     .banner-content .banner-buttons {
-    margin-top: 20px;
+    margin-top: calc(10px + (64 - 10) * ((100vw - 992px) / (1920 - 992)));
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
@@ -285,6 +291,7 @@
           text-align: left;
       {% endcase %}
       max-width: {{ section.settings.content_width | default: 40 }}%;
+      min-width: 40rem;
       z-index: 1;
       }
     }
